# lox

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
plox/: __main__.py  ast_printer.py  builtin_function.py  cli.py  environment.py  error.py  expr.py  interpreter.py  parser.py  resolver.py  runtime_object.py  scanner.py  stmt.py
pylox/: Makefile  __main__.py  error.py  expr.py  parser.py  resolver.py  runtime_object.py  scanner.py  stmt.py
pylox/pylox/: ast_printer.py  builtin_function.py  cli.py  environment.py  error.py  expr.py  interpreter.py  lox_core.py  parser.py  resolver.py  runtime_object.py  scanner.py  stmt.py  tokens.py
pylox/scripts/: generate_ast.sh
pylox/tests/: test_ast.py  test_parser.py  test_scanner.py
pylox/tools/: generate_ast.py
tests/: test_ast.py  test_parser.py  test_scanner.py
tools/: generate_ast.py
