[project]
authors = [{name = "hieutdle", email = "hieu.tdle@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "pylox"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["https://conda.modular.com/max-nightly", "https://conda.modular.com/max", "https://repo.prefix.dev/modular-community", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pylox = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytest = ">=8.3.4,<9"
typer = ">=0.15.1,<0.16"
rich = ">=13.9.4,<14"
